# CbmRoot

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake  CbmRoot_test.cmake  CbmRoot_test1.cmake  Dart.sh  DartConfig.cmake  INSTALL  Makefile.am  NEWS  README  README.md  cbmDoxyfile.conf  configure.ac  reconf
KF/: CMakeLists.txt  CbmKF.cxx  CbmKF.h  CbmKFFieldMath.cxx  CbmKFFieldMath.h  CbmKFHit.cxx  CbmKFHit.h  CbmKFMaterial.cxx  CbmKFMaterial.h  CbmKFMath.cxx  CbmKFMath.h  CbmKFPartEfficiencies.h  CbmKFParticle.cxx  CbmKFParticle.h  CbmKFParticleInterface.cxx  CbmKFParticleInterface.h  CbmKFParticle_simd.cxx  CbmKFParticle_simd.h  CbmKFPixelMeasurement.cxx  CbmKFPixelMeasurement.h  CbmKFPrimaryVertexFinder.cxx  CbmKFPrimaryVertexFinder.h  CbmKFSecondaryVertexFinder.cxx  CbmKFSecondaryVertexFinder.h  CbmKFTrackInterface.cxx  CbmKFTrackInterface.h  CbmKFUMeasurement.cxx  CbmKFUMeasurement.h  CbmKFVertexInterface.cxx  CbmKFVertexInterface.h  KFLinkDef.h  Makefile.am
L1/: CMakeLists.txt  CbmL1.cxx  CbmL1.h  CbmL1CATrdTrackFinderSA.cxx  CbmL1CATrdTrackFinderSA.h  CbmL1Constants.h  CbmL1Counters.h  CbmL1Def.h  CbmL1MC.h  CbmL1MCPoint.h  CbmL1MCTrack.cxx  CbmL1MCTrack.h  CbmL1PartEfficiencies.h  CbmL1ParticlesFinder.cxx  CbmL1ParticlesFinder.h  CbmL1Performance.cxx  CbmL1ReadEvent.cxx  CbmL1StsHit.h  CbmL1TofMerger.cxx  CbmL1TofMerger.h  CbmL1Track.h  CbmL1TrackFitter.cxx  CbmL1TrackMerger.cxx  CbmL1TrackMerger.h  CbmL1TrackPar.h  CbmL1TrdHit.h  CbmL1TrdTrackFinderSts.cxx  CbmL1TrdTrackFinderSts.h  CbmL1TrdTracklet.cxx  CbmL1TrdTracklet4.cxx  CbmL1TrdTracklet4.h  CbmL1Vtx.h  Draw_FieldApprox.C  Draw_L1_histo.C  L1LinkDef.h  L1Types.h  Makefile.am  TODO.txt  reco_results.txt
analysis/: AnalysisLinkDef.h  CMakeLists.txt
cbmbase/: CMakeLists.txt  CbmAddress.h  CbmBaseLinkDef.h  CbmDetectorList.cxx  CbmDetectorList.h  CbmDigiManager.cxx  CbmDigiManager.h  CbmDirectPhotonGenerator.cxx  CbmEcalGenerator.cxx  CbmEcalGenerator.h  CbmGlobalTrackFitter.h  CbmHistManager.cxx  CbmHistManager.h  CbmMCEntry.h  CbmMCList.cxx  CbmMCList.h  CbmMCMatch.cxx  CbmMCMatch.h  CbmMCMatchCreatorTask.cxx  CbmMCMatchCreatorTask.h  CbmMCMatchLoaderTask.cxx  CbmMCMatchLoaderTask.h  CbmMCMatchSelectorTask.cxx  CbmMCMatchSelectorTask.h  CbmMCObject.cxx  CbmMCObject.h  CbmMCResult.cxx  CbmMCResult.h  CbmMCStage.cxx  CbmMCStage.h  CbmMCTestHitCompare.cxx  CbmMCTestHitCompare.h  CbmMCTestMomentumCompare.cxx  CbmMCTestMomentumCompare.h  CbmMatchRecoToMC.cxx  CbmMatchRecoToMC.h  CbmModule.cxx  CbmModule.h  CbmMuchTrackFinder.cxx  CbmMuchTrackFinder.h  (+24 more)
cbmdata/: CMakeLists.txt  CbmBaseHit.cxx  CbmBaseHit.h  CbmCluster.cxx  CbmCluster.h  CbmDetectorList.cxx  CbmDetectorList.h  CbmDigi.cxx  CbmDigi.h  CbmEcalPoint.cxx  CbmHit.cxx  CbmLink.cxx  CbmLink.h  CbmMCEpoch.cxx  CbmMCEpoch.h  CbmMCTrack.cxx  CbmMCTrack.h  CbmMatch.cxx  CbmMatch.h  CbmMuchHit.cxx  CbmMuchHit.h  CbmMuchTrack.cxx  CbmMuchTrack.h  CbmMvdHitMatch.h  CbmMvdPoint.cxx  CbmPixelHit.cxx  CbmPixelHit.h  CbmRichHit.h  CbmRichPoint.h  CbmRichRing.cxx  CbmStack.cxx  CbmStack.h  CbmStripHit.cxx  CbmStripHit.h  CbmStsHit.cxx  CbmStsPoint.h  CbmSttHit.cxx  CbmSttPoint.cxx  CbmTrack.cxx  CbmTrack.h  (+7 more)
cbmdisplay/: CMakeLists.txt  CbmDisplayLinkDef.h  CbmPixelHitSetDraw.cxx  CbmPixelHitSetDraw.h  CbmTrdDigiDraw.cxx  CbmTrdDigiDraw.h
cbmgenerators/: CMakeLists.txt  CbmDirectPhotonGenerator.cxx  CbmDirectPhotonGenerator.h  CbmEcalGenerator.cxx  CbmEcalGenerator.h  CbmGeneratorsLinkDef.h  CbmHsdGenerator.cxx  CbmHsdGenerator.h  CbmHsdLvmGenerator.cxx  CbmHsdLvmGenerator.h  CbmIonGenerator.cxx  CbmIonGenerator.h  CbmShieldGenerator.cxx  CbmShieldGenerator.h  CbmUnigenGenerator.cxx  CbmUnigenGenerator.h  CbmUrqmdGenerator.cxx  CbmUrqmdGenerator.h  UEvent.cxx  UEvent.h  UParticle.cxx  UParticle.h  URun.cxx
dilept/: CMakeLists.txt  CbmDileptTask.cxx  CbmDileptTask.h  CbmDileptonAssignMCid.cxx  CbmDileptonAssignMCid.h  CbmDileptonAssignPid.cxx  CbmDileptonAssignPid.h  CbmDileptonTrack.cxx  CbmDileptonTrack.h  CbmDileptonTrackReal.cxx  CbmDileptonTrackReal.h  CbmDileptonTrackRealCollection.cxx  CbmDileptonTrackRealCollection.h  CbmDileptonTrackSim.cxx  CbmDileptonTrackSim.h  CbmDileptonTrackSimCollection.cxx  CbmDileptonTrackSimCollection.h  DileptonLinkDef.h  Makefile.am
ecal/: CMakeLists.txt  CbmEcal.cxx  CbmEcal.h  CbmEcalAnalysis.cxx  CbmEcalAnalysis.h  CbmEcalAnalysisBSh.cxx  CbmEcalAnalysisBSh.h  CbmEcalAnalysisCalib.cxx  CbmEcalAnalysisCalib.h  CbmEcalAnalysisCluster.cxx  CbmEcalAnalysisCluster.h  CbmEcalAnalysisDS.cxx  CbmEcalAnalysisDS.h  CbmEcalAnalysisDst.cxx  CbmEcalAnalysisDst.h  CbmEcalAnalysisEres.cxx  CbmEcalAnalysisEres.h  CbmEcalAnalysisJPsi.cxx  CbmEcalAnalysisJPsi.h  CbmEcalAnalysisMaterial.cxx  CbmEcalAnalysisMaterial.h  CbmEcalAnalysisNeutron.cxx  CbmEcalAnalysisNeutron.h  CbmEcalAnalysisPair.cxx  CbmEcalAnalysisPair.h  CbmEcalAnalysisPi0.cxx  CbmEcalAnalysisPi0.h  CbmEcalAnalysisRe.cxx  CbmEcalAnalysisRe.h  CbmEcalAnalysisSShape.cxx  CbmEcalAnalysisSShape.h  CbmEcalAnalysisShape.cxx  CbmEcalAnalysisShape.h  CbmEcalAnalysisSimple.cxx  CbmEcalAnalysisSimple.h  CbmEcalAnalysisUniformity.cxx  CbmEcalAnalysisUniformity.h  CbmEcalCalibration.cxx  CbmEcalCalibration.h  CbmEcalCalibrationV2.cxx  (+133 more)
field/: CMakeLists.txt  CbmBsField.cxx  CbmBsField.h  CbmFieldConst.cxx  CbmFieldConst.h  CbmFieldContFact.cxx  CbmFieldContFact.h  CbmFieldCreator.cxx  CbmFieldCreator.h  CbmFieldMap.cxx  CbmFieldMap.h  CbmFieldMapCreator.cxx  CbmFieldMapCreator.h  CbmFieldMapData.cxx  CbmFieldMapData.h  CbmFieldMapDistorted.cxx  CbmFieldMapDistorted.h  CbmFieldMapSym1.cxx  CbmFieldMapSym1.h  CbmFieldMapSym2.cxx  CbmFieldMapSym2.h  CbmFieldMapSym3.cxx  CbmFieldMapSym3.h  CbmFieldPar.cxx  CbmFieldPar.h  FieldLinkDef.h  Makefile.am
global/: CMakeLists.txt  CbmEcalTrackingMuch.cxx  CbmEcalTrackingMuch.h  CbmFindGlobalTracks.cxx  CbmFindGlobalTracks.h  CbmFindGlobalTracksQa.cxx  CbmFindGlobalTracksQa.h  CbmFindPrimaryVertex.cxx  CbmFindPrimaryVertex.h  CbmFitGlobalTracks.cxx  CbmFitGlobalTracks.h  CbmFitGlobalTracksQa.cxx  CbmFitGlobalTracksQa.h  CbmGlobalTrack.h  (+14 more)
(+4502 files in other folders)
